@@ -1,3 +1,8 @@
+2007-11-29  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* daemon/main.c: (main): Disable singleton window.
+	* scripts/link_icons.sh: Fixed a nit.
+
 2007-11-27  Darren Kenny  <darren.kenny@sun.com>
 
 	* common/nwamui_ip.c: 
